--- a/roles/ceph_client/defaults/main.yml
+++ b/roles/ceph_client/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
 
-ceph_release: quincy
+ceph_version: squid
 ceph_repo_distro: "el{{ ansible_distribution_major_version }}"
 ceph_repo_mirror: "https://eu.ceph.com"
-ceph_user_keys: {}
+ceph_keys: {}
 ceph_config_content: ""
 ceph_config_fetch_host: ""
