Use kernel SMB and NFS daemons for CephFS
cephadm managed ones are too annoying to manage with weird quirks.
Samba disconnects on MacOS when failover occurs.

--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -219,6 +219,8 @@ vips:
     ceph_nfs:
       - 10.0.10.36
   general:
+    smb:
+      - 10.0.50.33
     ceph_nfs:
       - 10.0.50.36
   san:
@@ -239,6 +241,8 @@ vips_with_prefix:
     ceph_nfs:
       - 10.0.10.36/24
   general:
+    smb:
+      - 10.0.50.33/24
     ceph_nfs:
       - 10.0.50.36/24
   san:
