--- a/inventory/group_vars/ceph/keepalived.yml
+++ b/inventory/group_vars/ceph/keepalived.yml
@@ -1,20 +1,25 @@
 ---
 
 # Limit to 3 so we avoid split brain, hopefully
-keepalived_hosts: "{{ groups['ceph'][:3] }}"
+keepalived_hosts: "{{ groups['ms01'][:3] }}"
 
 keepalived_global_defs:
   - enable_script_security
 
 keepalived_scripts:
   check_nfs_cephfs:
-    check_script: '/usr/bin/nc -vz localhost {{ ceph_nfs_clusters[0].port }}'
+    check_script: "/etc/keepalived/check_nfs_cephfs.sh"
+    src_check_script: "{{ repo_base_dir }}/files/ceph/check_nfs_cephfs.sh"
+    user: root
+  check_smb_cephfs:
+    check_script: "/etc/keepalived/check_smb_cephfs.sh"
+    src_check_script: "{{ repo_base_dir }}/files/ceph/check_smb_cephfs.sh"
     user: root
 
 keepalived_selinux_compile_rules: []
 
 keepalived_instances:
-  nfs_general:
+  smb_general:
     interface: "GENERAL"
     state: "{{ (keepalived_hosts | ansible.utils.index_of('eq', inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
     virtual_router_id: 50
@@ -22,19 +27,19 @@ keepalived_instances:
     unicast_src_ip: "{{ host_ips.general }}"
     unicast_peers: "{{ keepalived_hosts | difference([inventory_hostname]) | map('extract', hostvars, 'host_ips') | map(attribute='general') | list }}"
     authentication_password: "{{ vault_keepalived_authentication_password }}"
-    vips: "{{ vips_with_prefix.general.ceph_nfs | map('regex_replace', '$', ' dev GENERAL') }}"
+    vips: "{{ vips_with_prefix.general.smb | map('regex_replace', '$', ' dev GENERAL') }}"
     track_scripts:
-      - check_nfs_cephfs
+      - check_smb_cephfs
 
-  nfs_san:
-    interface: "SAN"
+  nfs_general:
+    interface: "GENERAL"
     state: "{{ (keepalived_hosts | ansible.utils.index_of('eq', inventory_hostname) == 0) | ternary('MASTER', 'BACKUP') }}"
     virtual_router_id: 51
     priority: "{{ (inventory_hostname == keepalived_hosts[0]) | ternary('200', '100') }}"
-    unicast_src_ip: "{{ host_ips.san }}"
-    unicast_peers: "{{ keepalived_hosts | difference([inventory_hostname]) | map('extract', hostvars, 'host_ips') | map(attribute='san') | list }}"
+    unicast_src_ip: "{{ host_ips.general }}"
+    unicast_peers: "{{ keepalived_hosts | difference([inventory_hostname]) | map('extract', hostvars, 'host_ips') | map(attribute='general') | list }}"
     authentication_password: "{{ vault_keepalived_authentication_password }}"
-    vips: "{{ vips_with_prefix.san.ceph_nfs | map('regex_replace', '$', ' dev SAN') }}"
+    vips: "{{ vips_with_prefix.general.ceph_nfs | map('regex_replace', '$', ' dev GENERAL') }}"
     track_scripts:
       - check_nfs_cephfs
 
