--- a/inventory/group_vars/ceph/nfs.yml
+++ b/inventory/group_vars/ceph/nfs.yml
@@ -1,30 +1,56 @@
 ---
 
-ceph_nfs_clusters:
-  - name: "cephfs"
-    port: 2050
-    count: 2
-    config: |
-      NFSV4 {
-          Allow_Numeric_Owners = true;
-          Only_Numeric_Owners = true;
-      }
-
-ceph_nfs_exports:
-  - path: "/"
-    cluster_id: "{{ ceph_nfs_clusters[0].name }}"
-    access_type: "NONE"
-    pseudo: "/root"
-    clients:
-      - access_type: "RW"
-        addresses: "{{ subnets.general.trusted }}"
-
-  - path: "/kube"
-    cluster_id: "{{ ceph_nfs_clusters[0].name }}"
-    pseudo: "/kube"
-    access_type: "NONE"
-    clients:
-      - access_type: "RW"
-        addresses: "{{ subnets.talos.control_plane + subnets.talos.worker }}"
-
-__ceph_nfs_client_addresses: "{{ ceph_nfs_exports | map(attribute='clients') | flatten | map(attribute='addresses') | flatten | unique }}"
+# MacOS needs to mount with -o resvport or share needs insecure option
+nfs_shares:
+  # Backup shares
+  # - path: /mnt/ceph_tank/backup/pgsql
+  #   options: "rw,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.vm.pg }}"
+  #   gen_uuid: true
+  # - path: /mnt/ceph_tank/backup/gitlab
+  #   options: "rw,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.vm.gitlab }}"
+  #   gen_uuid: true
+  # - path: /mnt/ceph_tank/backup/pgbackrest
+  #   options: "rw,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.vm.pgbackrest }}"
+  #   gen_uuid: true
+  # All dataset shares
+  # - path: /mnt/ceph/andrei
+  #   options: "rw,root_squash,no_subtree_check"
+  #   sources: "{{ firewall_trusted_sources }}"
+  #   gen_uuid: true
+  - path: /mnt/ceph/containers
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+    gen_uuid: true
+  - path: /mnt/ceph_tank
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ firewall_trusted_sources }}"
+    gen_uuid: true
+  # - path: /mnt/ceph_tank/media/motion
+  #   options: "rw,no_root_squash,no_subtree_check"
+  #   sources: "{{ [hostvars['drepi'].ansible_host] }}"
+  #   gen_uuid: true
+  # Docker shares
+  # - path: /mnt/ceph_tank/media
+  #   options: "rw,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.vm.docker }}"
+  #   gen_uuid: true
+  # - path: /mnt/ceph_tank/yes
+  #   options: "ro,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.vm.docker }}"
+  #   gen_uuid: true
+  # - path: /mnt/ceph_tank/downloads
+  #   options: "rw,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.vm.docker }}"
+  #   gen_uuid: true
+  # # Kubernetes shares
+  # - path: /mnt/ceph_tank/yes
+  #   options: "ro,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.san.talos }}"
+  #   gen_uuid: true
+  # - path: /mnt/ceph/kube
+  #   options: "rw,no_root_squash,no_subtree_check"
+  #   sources: "{{ subnets.san.talos }}"
+  #   gen_uuid: true
