--- a/inventory/group_vars/ceph/samba.yml
+++ b/inventory/group_vars/ceph/samba.yml
@@ -6,9 +6,7 @@ samba_clustering: true
 samba_cluster_lock: "/mnt/ceph/.ctdb/reclock"
 samba_ctdb_node_address: "{{ host_ips.san }}"
 # Use same hosts to avoid split-brain
-# samba_ctdb_nodes: "{{ keepalived_hosts | map('extract', hostvars, 'host_ips') | map(attribute='san') | list }}"
-# TODO: Use above once Tank is removed from Theia
-samba_ctdb_nodes: "{{ groups['ms01'] | map('extract', hostvars, 'host_ips') | map(attribute='san') | list }}"
+samba_ctdb_nodes: "{{ keepalived_hosts | map('extract', hostvars, 'host_ips') | map(attribute='san') | list }}"
 # Fails with 10.interface: ERROR: Unable to determine interface for IP 10.0.50.33
 # samba_ctdb_public_addresses: "{{ vips_with_prefix.general.smb | map('regex_replace', '$', ' GENERAL') }}"
 
@@ -41,5 +39,5 @@ samba_shares:
 
   tank:
     comment: "CephFS Tank"
-    path: "/mnt/ceph_tank"
+    path: "/mnt/tank"
     writable: true
