--- a/inventory/host_vars/theia/systemd/backup-gdrive.yml
+++ b/inventory/host_vars/theia/systemd/backup-gdrive.yml
@@ -49,6 +49,6 @@ __sd_backup_gdrive:
 
         rclone sync -v /mnt/tank/archive/savegames gcrypt:savegames
         rclone sync -v --exclude 'Camera/**' nextcloud: gcrypt:Nextcloud
-        rclone sync -v /mnt/containers/syncthing/data gsecret:syncthing
+        rclone sync -v /home/andrei/syncthing gsecret:syncthing
 
         exit $global_exit
