--- a/inventory/group_vars/prom_common/alertmanager.yml
+++ b/inventory/group_vars/prom_common/alertmanager.yml
@@ -36,6 +36,11 @@ alertmanager_route:
       matchers:
         - job=~"blackbox.*"
 
+    - group_wait: 2h
+      matchers:
+        - alertname="ContainerCpuUsage"
+        - name=~"plex.*"
+
     - group_wait: 16h
       matchers:
         - alertname="ContainerCpuUsage"
