--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-ansible-pylibssh
-cryptography
-docker
-jmespath
-kubernetes
-librouteros
-netaddr
+ansible-pylibssh>=1.2,<1.3
+cryptography>=44,<45
+docker>=7.0,<8.0
+jmespath>=1.0,<1.1
+kubernetes>=32,<33
+librouteros>=3.4,<4.0
+netaddr>=1.3,<2.0
+bitwarden-sdk>=1.0,<2.0 # https://github.com/bitwarden/sdk-sm/issues/1148
