--- a/inventory/group_vars/prom/grafana.yml
+++ b/inventory/group_vars/prom/grafana.yml
@@ -2,7 +2,7 @@
 
 grafana_admin_pass: "{{ vault_grafana_admin_pass }}"
 grafana_admin_user: "{{ vault_grafana_admin_user }}"
-grafana_psql_pass: "{{ vault_grafana_psql_pass }}"
+grafana_psql_pass: "{{ hostvars['pg01'].vault_postgresql_passwords.grafana }}"
 grafana_url: "https://{{ grafana_domain }}/"
 grafana_instance: "localhost"
 grafana_address: "0.0.0.0"
