Scrape IPMI from romsto

--- a/inventory/group_vars/prom/ipmi.yml
+++ b/inventory/group_vars/prom/ipmi.yml
@@ -8,3 +8,8 @@ ipmi_exporter_modules:
     pass: "{{ vault_ipmi_exporter_pass.theia }}"
     driver: "LAN_2_0"
     privilege: "admin"
+  romsto:
+    user: "exporter"
+    pass: "{{ vault_ipmi_exporter_pass.romsto }}"
+    driver: "LAN_2_0"
+    privilege: "operator"
