--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -176,6 +176,11 @@ __extra_prometheus_scrape_configs:
           instance: "theia"
           __param_target: "{{ hostvars['theia'].host_ips.ipmi }}"
           __param_module: "theia"
+      - targets: ["localhost:{{ ipmi_exporter_port }}"]
+        labels:
+          instance: "{{ hostvars['romsto'].prometheus_node_labels.instance }}"
+          __param_target: "{{ hostvars['romsto'].host_ips.ipmi }}"
+          __param_module: "romsto"
 
   - job_name: "nut"
     metrics_path: /ups_metrics
