Fix samba role crash when clustering is disabled
ERROR! Failed to convert the throttle value to an integer.. invalid literal for int() with base 10: '__omit_place_holder__7c4136953d118311766fc5c4d591c93e89382d27'

--- a/roles/samba/tasks/users.yml
+++ b/roles/samba/tasks/users.yml
@@ -2,7 +2,7 @@
 ---
 
 - name: Create samba users
-  throttle: "{{ 1 if samba_clustering else omit }}"
+  throttle: "{{ 1 if samba_clustering else 0 }}"
   ansible.builtin.shell:
     cmd: >
       set -e -o pipefail
@@ -16,7 +16,7 @@
   no_log: true
 
 - name: Set samba passwords correctly
-  throttle: "{{ 1 if samba_clustering else omit }}"
+  throttle: "{{ 1 if samba_clustering else 0 }}"
   ansible.builtin.shell:
     cmd: >
       set -e -o pipefail
