--- a/playbooks/theia.yml
+++ b/playbooks/theia.yml
@@ -78,6 +78,9 @@
           tags: ["script"]
 
   roles:
+    - role: samba
+      tags: ["samba"]
+
     - role: systemd
       tags: ["systemd", "rclone"]
 
