--- a/inventory/host_vars/theia/firewall.yml
+++ b/inventory/host_vars/theia/firewall.yml
@@ -6,6 +6,12 @@ __firewalld_rules_2: []
 __firewall_ssh_public: "present"
 __firewall_cockpit_zone: "public"
 __firewalld_services_1:
+  - name: nfs3
+    zone: public
+
+  - name: samba
+    zone: public
+
   - name: http
     sources: "{{ firewall_trusted_sources }}"
     zone: public
